2008-10-27  Mark Ellis  <mark@mpellis.org.uk>

	* src/rapi_buffer.c - remove writev(), causes problems at least
	  on FreeBSD, and provides no benefit
	* configure.ac.in - remove checks for writev() and readv()

2008-09-10  Mark Ellis  <mark@mpellis.org.uk>

	* src/rapi_indirection.c - enable CeSetEndOfFile()

2008-08-19  Mark Ellis  <mark@mpellis.org.uk>

	* python/pyrapi2.pyx - don't segfault on empty strings

2008-08-11  Mark Ellis  <mark@mpellis.org.uk>

	* tools/pls.c - option for recursive listing
	* tools/man/pls.1 - man page update for recursive listing

2008-06-17  Mark Ellis  <mark@mpellis.org.uk>

	* recursive directory copy for pcp

2008-06-07  Mark Ellis  <mark@mpellis.org.uk>

	* more useful error messages for pls and pcp

2008-05-19  Mark Ellis  <mark@mpellis.org.uk>

	* rewrite rapi 1 CeReadRecordProps() and CeWriteRecordProps() to
	  account for non-32 bit host pointers

2008-05-11  Mark Ellis  <mark@mpellis.org.uk>

	* remaining dummy functions for unimplemented calls

2008-05-09  Mark Ellis  <mark@mpellis.org.uk>

	* introduced dummy functions for most calls represented in the
	  header but not implemented, returns failure with rapi error
	  set to E_NOTIMPL instead of segfaulting
	* in rapi 1, pass result_2 into rapi error, this is an HRESULT

2008-05-09  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* script/synce-remove-program.1: Escaped minus signs so they're not
	hyphens. Notified by lintian.

2008-05-06  Mark Ellis  <mark@mpellis.org.uk>

	* fixed compiler warnings

2008-04-22  Mark Ellis  <mark@mpellis.org.uk>

	* implemented CeFindNextFile() & CeFindClose() in rapi2

2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* script/synce-install-cab.1:
	* script/synce-remove-program.1:
	* tools/man/pcp.1:
	* tools/man/pkillall.1:
	* tools/man/pls.1:
	* tools/man/pmkdir.1:
	* tools/man/pmv.1:
	* tools/man/prm.1:
	* tools/man/prmdir.1:
	* tools/man/prun.1:
	* tools/man/psettime.1:
	* tools/man/pshortcut.1:
	* tools/man/pstatus.1: